[metadata]
name = envault
version = 0.1.0
description = A local secrets manager that encrypts .env files and syncs them across dev environments.
author = envault contributors
license = MIT
python_requires = >=3.9

[options]
packages = find:
install_requires =
    click>=8.0
    cryptography>=41.0

[options.entry_points]
console_scripts =
    envault = envault.cli:cli

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv
